# shoong-shoong-marble

./: .gitignore  board_space_data.csv  board_space_data.txt  client.py  property_data.txt  pyproject.toml  ui.py
app/board/: impl.py
app/board_space/: abstract.py  land_result.py
app/board_space/bonus_game/: impl.py
app/board_space/chance/: impl.py
app/board_space/island/: impl.py
app/board_space/olympic/: impl.py
app/board_space/property/: impl.py
app/board_space/start/: impl.py
app/board_space/tax_office/: impl.py
app/board_space/tour/: impl.py
app/board_space/tourist_spot/: impl.py
app/chance_card/: abstract.py  deck.py
app/chance_card/attack/: AlienInvasionCard.py  BlackoutCard.py  CityChangeCard.py  CityDonationCard.py  EarthquakeCard.py  ForceTaxCard.py  ForcedCitySaleCard.py  InfectiousDiseaseCard.py  YellowDustCard.py  __init__.py
app/chance_card/defence/: AngelCard.py  DiscountCouponCard.py  IslandEscapeCard.py  ShieldCard.py  TollFreeCard.py  __init__.py
app/chance_card/event/: DesertIslandMoveCard.py  FestivalCard.py  OlympicCard.py  StartMoveCard.py  TaxPenaltyCard.py  WorldTravelCard.py  __init__.py
app/dice/: dices.py  impl.py
app/game/: impl.py  leaderboard.py
app/money/: impl.py
app/player/: impl.py
app/position_manager/: impl.py
app/turn_manager/: impl.py
config/: ui_config.py
game/: states.py
mygame_env/: pyvenv.cfg
ui/: board_block.py  board_renderer.py  constants.py  corner_block.py  game_ui.py  main.py  player_panel.py
ui/components/: button.py  input_field.py
utils/: file_loader.py
